# MTF

./: .gitignore  CMakeLists.txt  CompositeTrackingDemo  LICENSE  MosaicingDemo  MosaicingDemod  ReadMe.html  ReadMe.md  makefile  mtf_mex_cmd.txt
AM/: AM.cmake  AM.mak
AM/src/: AMParams.cc  CCRE.cc  CCRE_tbb.cc  DFM.cc  GB.cc  ImageBase.cc  KLD.cc  LKLD.cc  LRSCV.cc  LSCV.cc  MCCCRE.cc  MCLSCV.cc  MCMI.cc  MCNCC.cc  MCPCA.cc  MCRIU.cc  MCRSCV.cc  MCSAD.cc  MCSCV.cc  MCSPSS.cc  MCSSD.cc  MCSSIM.cc  MCZNCC.cc  MI.cc  NCC.cc  NGF.cc  NSSD.cc  PCA.cc  PGB.cc  RBF.cc  RIU.cc  RSCV.cc  SAD.cc  SCV.cc  SPSS.cc  SSD.cc  SSDBase.cc  SSIM.cc  SumOfAMs.cc  ZNCC.cc
Config/: Config.cmake  Config.mak  ReadMe.md  examples.cfg  feat.cfg  modules.cfg  mtf.cfg  multi.cfg  sigma.cfg  thirdparty.cfg
Diagnostics/: Diagnostics.cmake  Diagnostics.mak
Diagnostics/src/: DiagAnalytic.cc  DiagHelper.cc  DiagInvAnalytic.cc  DiagNumeric.cc  Diagnostics.cc
Docs/: Doxyfile.in  MTF_setup_Ubuntu18_Matlab2018b.md  ToDo.md  doxygen_entrydb_3948.tmp
Docs/html/: AESM_8h_source.html  Affine_8h_source.html  AppearanceModel_8h_source.html  CCRE_8h_source.html  CascadeParams_8h_source.html  CascadeSM_8h_source.html  CascadeTracker_8h_source.html  CompositeBase_8h_source.html  CompositeSM_8h_source.html  CornerHomography_8h_source.html  DiagBase_8h_source.html  Diagnostics_8h_source.html  ESMH_8h_source.html  ESMParams_8h_source.html  ESM_8h_source.html  FALKParams_8h_source.html  FALK_8h_source.html  FCGD_8h_source.html  FCLKParams_8h_source.html  FCLK_8h_source.html  FESMBase_8h_source.html  FESM_8h_source.html  FGNN_8h_source.html  FLANNParams_8h_source.html  FMaps_8h_source.html  GB_8h_source.html  GNNParams_8h_source.html  GNN_8h_source.html  GridBase_8h_source.html  GridTrackerCV_8h_source.html  GridTracker_8h_source.html  HACLK_8h_source.html  HESM_8h_source.html  Homography_8h_source.html  IALK2_8h_source.html  IALKParams_8h_source.html  IALK_8h_source.html  ICLKParams_8h_source.html  ICLK_8h_source.html  IlluminationModel_8h_source.html  (+526 more)
Docs/latex/: annotated.tex  classAESM.eps  classAESM.tex  classAffine.eps  classAffine.tex  classAffineEstimator.eps  classAffineEstimator.tex  classAppearanceModel.eps  classAppearanceModel.tex  classCCRE.eps  classCCRE.tex  classCascadeSM.eps  classCascadeSM.tex  classCascadeTracker.eps  classCascadeTracker.tex  classCompositeBase.eps  classCompositeBase.tex  classCompositeSM.eps  classCompositeSM.tex  classCornerHomography.eps  classCornerHomography.tex  classDiagBase.tex  classDiagnostics.tex  classESM.eps  classESM.tex  classESMH.eps  classESMH.tex  classFALK.eps  classFALK.tex  classFCGD.eps  classFCGD.tex  classFCLK.eps  classFCLK.tex  classFESM.eps  classFESM.tex  classFESMBase.eps  classFESMBase.tex  classFESM_3_01AM_00_01SSM_00_01HessT_1_1CurrentSelf_00_01JacT_1_1DiffOfJacs_01_4.eps  classFESM_3_01AM_00_01SSM_00_01HessT_1_1CurrentSelf_00_01JacT_1_1DiffOfJacs_01_4.tex  classFESM_3_01AM_00_01SSM_00_01HessT_1_1CurrentSelf_00_01JacT_1_1Original_01_4.eps  (+323 more)
Examples/: Examples.cmake  Examples.mak  ReadMe.md
Examples/cpp/: CompositeTrackingDemo.cc  MosaicingDemo.cc  SimpleTrackingDemo.cc  UAVDemo.cc  WarpingDemo.cc  createMosaic.cc  diagnoseMTF.cc  extractPatch.cc  generateSyntheticSeq.cc  lk_cv.cc  mexMTF.cc  mexMTF2.cc  mexMTF_MT.cc  pyLK.cc  pyMTF.cc  pyMTF2.cc  pyWarp.cc  pyWarp.cpp  recordSeq.cc  registerSeq.cc  runMTF.cc  showGroundTruth.cc  test.cc  testMTF.cc  trackMarkers.cc  trackUAVTrajectory.cc
Examples/include/: modules.mak
Examples/matlab/: datasets.m  runMTF.asv  runMTF.m  runMTF2.m
Examples/python/: datasets.py  nl_bookI_s3_res.txt  runMTF.py  runMTF2.py  setup.py  utilities.py
Examples/src/: CompositeTrackingDemo.cc  ICRATrackingDemo.cc  ICRAUAVDemo.cc  MosaicingDemo.cc  QRTracker.cc  SimpleTrackingDemo.cc  UAVDemo.cc  WarpingDemo.cc  createMosaic.cc  extractPatch.cc  generateSyntheticSeq.cc  mexMTF.cc  pyMTF.cc  recordSeq.cc  runMTF.cc  showGroundTruth.cc  testMTF.cc  trackMarkers.cc  trackUAVTrajectory.cc
Macros/: Macros.cmake  Macros.mak
Matlab/: readPatchFromBinary.m
ROS/: CMakeLists.txt  ReadMe.md  package.xml
ROS/cfg/: modules.cfg  multi.cfg
ROS/devel/: .catkin  .rosinstall  _setup_util.py
ROS/devel/include/mtf_bridge/: BufferInit.h  Patch.h  PatchTrackers.h  Point.h
ROS/devel/lib/mtf_bridge/: SharedImageWriter  sample_tracker_node
ROS/devel/lib/pkgconfig/: mtf_bridge.pc
ROS/devel/lib/python2.7/dist-packages/mtf_bridge/msg/: _BufferInit.py  _Patch.py  _PatchTrackers.py  _Point.py  __init__.py
ROS/devel/share/common-lisp/ros/mtf_bridge/msg/: BufferInit.lisp  Patch.lisp  PatchTrackers.lisp  Point.lisp  _package.lisp  _package_BufferInit.lisp  _package_Patch.lisp  _package_PatchTrackers.lisp  _package_Point.lisp  mtf_bridge-msg.asd
ROS/devel/share/mtf_bridge/cmake/: mtf_bridge-msg-extras.cmake  mtf_bridge-msg-paths.cmake  mtf_bridgeConfig.cmake
ROS/include/mtf_bridge/: SharedImageWriter.h
ROS/launch/: sample_tracker_node.launch
ROS/msg/: BufferInit.msg  Error.msg  Patch.msg  PatchTrackers.msg
ROS/src/: sample_tracker_node.cpp
ROS/src/mtf_bridge/: CMakeLists.txt  package.xml
ROS/src/mtf_bridge/cfg/: examples.cfg  feat.cfg  modules.cfg  mtf.cfg  multi.cfg  sigma.cfg  thirdparty.cfg
ROS/src/mtf_bridge/cmake/: mtfUtils.cmake
ROS/src/mtf_bridge/cmake/Modules/: FindMTF.cmake
ROS/src/mtf_bridge/include/mtf_bridge/: SharedImageReader.h
ROS/src/mtf_bridge/launch/: sample_2_cam_configuration.launch
ROS/src/mtf_bridge/scripts/: error_grouper.py
ROS/src/mtf_bridge/src/: SharedImageReader.cpp  SharedImageWriter.cpp  sample_tracker_node.cpp
SM/: SM.cmake  SM.mak
SM/src/: CascadeParams.cc  CascadeSM.cc  CascadeTracker.cc  ESM.cc  ESMParams.cc  FALK.cc  FALKParams.cc  FCLK.cc  FCLKParams.cc  FESM.cc  FESMBase.cc  FGNN.cc  FLANNCVParams.cc  FLANNParams.cc  NN.cc  (+28 more)
SSM/: SSM.cmake  SSM.mak
Test/: Test.cmake  Test.mak
Utilities/: Utilities.cmake  Utilities.mak
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: CMakeLists.txt.example  cmake.md  env_setup  mtfConfig.cmake.in  mtfUtils.cmake
(+336 files in other folders)
