<?xml version="1.0"?>
<package>
  <name>mtf_bridge</name>
  <version>0.1.0</version>
  <description>The mtf_bridge package. Provides a simple compatibility layer between the Modular Tracking Framework (MTF) and ROS.
  </description>

  <maintainer email="oscar@rmz.ca">Oscar Ramirez</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>catkin_modules</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>OpenCV</run_depend>

  <export>
  </export>
</package>
